--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         </div>
         <button onclick="window.location.href='portfolio.html' ">Show More</button>
     </div>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
