--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,27 +35,27 @@
         <h1>Gallery</h1>
         <div class="rows">
             <img src="media/paint10.jpg" alt="">
-            <img src="media/paint2.jpg" alt="">
             <img src="media/paint3.jpg" alt="">
+            <img src="media/paint2.jpg" alt="">
             <img src="media/paint4.jpg" alt="">
         </div>
         <div class="rows">
             <img src="media/paint5.jpg" alt="">
             <img src="media/paint6.png" alt="">
             <img src="media/paint7.jpg" alt="">
+            <img src="media/paint12.jpg" alt="">
         </div>
         <div class="rows">
             <img src="media/paint9.jpg" alt="">
             <img src="media/paint8.jpg" alt="">
             <img src="media/paint11.jpg" alt="">
-            <img src="media/paint12.jpg" alt="">
 
         </div>
         <button onclick="window.location.href='portfolio.html' ">Show More</button>
     </div>
-    <footer>
+    <div class="about">
 
-    </footer>
+    </div>
 </body>
 
 </html>
