--- a/about.html
+++ b/about.html
@@ -9,6 +9,10 @@
     <title>About the Kurious Art Gallery</title>
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -20,6 +24,27 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+    <div id="about">
+        <div class="img">
+            <img src="media/artist.jpg" alt="artist">
+            <div class="icons">
+                <a href="https://facebook.com" class="fa fa-facebook"></a>
+                <a href="https://twitter.com" class="fa fa-twitter"></a>
+                <a href="https://instagram.com" class="fa fa-instagram"></a>
+                <a href="https://pinterest.com" class="fa fa-pinterest"></a>
+            </div>
+        </div>
+        <div class="about">
+            <h2>About Us</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, perspiciatis soluta assumenda excepturi iusto fugit, pariatur eveniet ipsa quisquam quae et voluptate mollitia eaque? Repellat esse quibusdam eaque cumque perspiciatis dignissimos est labore! Nesciunt nobis corporis itaque voluptate obcaecati delectus. Incidunt ex expedita numquam reiciendis consequatur quibusdam est quas laborum aut impedit minima sit velit modi et iure, autem officia voluptate iste rem vero? Dolores nesciunt doloremque ea! Architecto quae illum quod. Consectetur odit quos ratione error voluptates mollitia totam, iste sequi ut corrupti quae saepe dolorem fugit iure repellendus suscipit alias labore officia ab ipsam! Sunt optio corrupti vel.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, vitae facilis ad tempora dolor illum obcaecati? Quos repudiandae ipsa, asperiores voluptatum provident eaque error fugiat commodi doloremque hic praesentium ex! Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis fuga ab totam, sapiente laboriosam ipsa velit eaque officia debitis labore aperiam eveniet quam quos veritatis impedit, laborum accusantium? Obcaecati nesciunt fugit debitis exercitationem reprehenderit laborum nulla nam excepturi doloremque corrupti!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi accusantium animi sit aspernatur dignissimos laudantium, nam atque officiis ad, deserunt iusto libero eaque. Suscipit quas eos assumenda voluptatibus deleniti incidunt excepturi, accusamus quo porro. Eveniet incidunt, ex laborum velit molestiae harum dolorum, hic voluptatum architecto corporis obcaecati voluptate ut minus quibusdam. Id, quasi exercitationem fugiat recusandae saepe reprehenderit modi expedita sapiente architecto dolore, ut esse accusamus tempore corporis ad numquam, illum itaque sunt omnis praesentium tenetur labore. Omnis, quae repellendus.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
