--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="about.css">
     <title>About the Kurious Art Gallery</title>
     <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -28,10 +30,10 @@
         <div class="img">
             <img src="media/artist.jpg" alt="artist">
             <div class="icons">
-                <a href="https://facebook.com" class="fa fa-facebook"></a>
-                <a href="https://twitter.com" class="fa fa-twitter"></a>
-                <a href="https://instagram.com" class="fa fa-instagram"></a>
-                <a href="https://pinterest.com" class="fa fa-pinterest"></a>
+                <a target="_blank" href="https://facebook.com" class="fa fa-facebook"></a>
+                <a target="_blank" href="https://twitter.com" class="fa fa-twitter"></a>
+                <a target="_blank" href="https://instagram.com" class="fa fa-instagram"></a>
+                <a target="_blank" href="https://pinterest.com" class="fa fa-pinterest"></a>
             </div>
         </div>
         <div class="about">
